# ExplodingKittens

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: lint.yml  release.yml  testing.yml
cmake/: grpc.cmake  utils.cmake
lib/: CMakeLists.txt  CardPool.hpp  card_pool.cpp  card_pool.hpp  game.cpp  game.hpp  grpc_provider.cpp  grpc_provider.hpp  interface.hpp  player.cpp  player.hpp  state_machine.hpp  types.cpp  types.hpp
test/: CMakeLists.txt  game_test.cc  mock.hpp
