aux_source_directory(. DIR_SRCS)
include_directories(../lib)
include(GoogleTest)

add_executable(unit_test ${DIR_SRCS})

target_link_libraries(unit_test PRIVATE gtest)
target_link_libraries(unit_test PRIVATE gmock)
target_link_libraries(unit_test PRIVATE ${Boost_LIBRARIES})
gtest_discover_tests(unit_test)

